--- a/index.old.html
+++ b/index.old.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Header Start -->
-    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10 transition duration-500 ease-in-out">
+    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
@@ -24,20 +24,20 @@
                     <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rouded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Home</a>
+                                <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">About Me</a>
+                                <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
                             </li>
                             <li class="group">
                                 <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portfolio</a>
                             </li>
                             <li class="group">
-                                <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Skills</a>
+                                <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
                             </li>
-                            <!-- <li class="group">
+                            <li class="group">
                                 <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
-                            </li> -->
+                            </li>
                             <li class="group">
                                 <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
                             </li>
@@ -55,14 +55,14 @@
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
                     <h1 class="text-base font-semibold text-primary md:text-xl mb-2">
-                        Halo Semua, saya <span class="block font-bold text-dark text 4xl mt-1 lg:text-5xl">Putu Edi Puspayasa</span>
+                        Halo Semua, saya <span class="block font-bold text-dark text 4xl mt-1 lg:text-5xl">Edi Puspayasa</span>
                     </h1>
                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">
                         Web Developer | Back-End Developer
                     </h2>
-                    <p class="font-medium text-secondary mb-10 leading-relaxed">Never feel satisfied to <span class="text-dark font-bold">learn</span></p>
+                    <p class="font-medium text-secondary mb-10 leading-relaxed">Jangan pernah bosan untuk <span class="text-dark font-bold">belajar</span></p>
 
-                    <a href="#contact" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Contact Me</a>
+                    <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
                 </div>
 
                 <div class="w-full self-end px-4 lg:w-1/2">
@@ -85,12 +85,12 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
-                    <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-lg lg:text-4xl">#SelesaikanDenganCODING</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">I graduated with a bachelor's degree in Information Technology at Udayana University. 5+ years of experience in programming especially in Back-End Developer.</p>
+                    <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
+                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk Belajar Web Programming</h2>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et architecto rem maxime quas iusto corporis minus!</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Let's be friend</h3>
+                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari Berteman</h3>
                     <p class="text-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat veritatis facilis pariatur doloremque consectetur delectus quidem eos placeat.</p>
                     <div class="flex items-center">
                         <a href="https://instagram.com" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-400 hover:border-primary hover:bg-primary hover:text-white">
@@ -114,9 +114,9 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Portfolio</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Latest Project</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">some of the last projects I've worked on</p>
+                    <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
+                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima veniam delectus mollitia qui officiis adipisci, sapiente dicta labore consectetur numquam!</p>
                 </div>
             </div>
 
@@ -162,7 +162,7 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Skills</h4>
+                    <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
                     <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
                     <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde itaque ut cumque!</p>
                 </div>
@@ -192,13 +192,12 @@
     <!-- Clients Section End -->
 
     <!-- Blog Section Start -->
-
-    <!-- <section id="blog" class="pt-36 pb-32 bg-slate-100">
+    <section id="blog" class="pt-36 pb-32 bg-slate-100">
         <div class="container">
             <div class="w-full px-4">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Blog</h4>
+                        <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
                         <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan Terkini</h2>
                         <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nesciunt molestias similique maxime.</p>
                     </div>
@@ -238,8 +237,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
-
+    </section>
     <!-- Blog Section End -->
 
     <!-- Contact Section Start -->
@@ -248,7 +246,7 @@
             <div class="w-full px-4">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Contact</h4>
+                        <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                         <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
                         <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, laudantium.</p>
                     </div>
@@ -284,7 +282,7 @@
     <!-- Footer Start -->
     <footer class="bg-dark pt-24 pb-12">
         <div class="container">
-            <!-- <div class="flex flex-wrap">
+            <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
                     <h2 class="font-bold text-4xl text-white mb-5">EDI</h2>
                     <h3 class="font-bold text-2xl mb-2">Hubungi Kami</h3>
@@ -311,7 +309,7 @@
                         <li><a href="#contact" class="inline-block text-base hover:text-primary mb-3">Contact</a></li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
 
             <div class="w-full pt-10 border-t border-slate-700">
                 <div class="flex items-center justify-center mb-5">
