add copyright on footer

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="w-full pt-10 border-t border-slate-700">
                 
                 <p class="font-medium text-sm text-slate-500 text-center mb-3">#SelesaikanDenganCODING</p>
-                <p class="font-medium text-xs text-slate-500 text-center">Made with ❤️ by <a href="https://www.instagram.com/edi.puspayasa/" target="_blank" class="font-bold text-primary">Edi Puspayasa</a>.</p>
+                <p class="font-medium text-xs text-slate-500 text-center">&copy; <script>document.write(new Date().getFullYear())</script> - Made with ❤️ by <a href="https://www.instagram.com/edi.puspayasa/" target="_blank" class="font-bold text-primary">Edi Puspayasa</a>.</p>
             </div>
         </div>
     </footer>
