update meta tag

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta name="googlebot" content="index, follow" />
     <title>Portfolio - I Putu Edi Puspayasa</title>
 
-    <meta name="keywords" content="web developer, mobile developer, backend developer, bali website developer, buat website, jasa membuat website, jasa membuat sistem informasi, web developer terbaik" />
+    <meta name="keywords" content="web developer, mobile developer, backend developer, bali website developer, buat website, jasa membuat website, jasa membuat sistem informasi, web developer terbaik, selesaikan dengan coding, #selesaikandengancoding, selesaikandengancoding" />
     <meta name="description" content="Putu Edi Puspayasa - Seorang Web dan Back-End developer dari Bali. Menyediakan jasa pembuatan website, sistem informasi, aplikasi mobile." />
     <meta property="og:title" content="Portfolio - I Putu Edi Puspayasa" />
-    <meta property="og:description" content="Putu Edi Puspayasa - Seorang Web dan Back-End developer dari Bali. Menyediakan jasa pembuatan website, sistem informasi, aplikasi mobile." />
+    <meta property="og:description" content="Putu Edi Puspayasa - Seorang Web dan Back-End developer dari Bali. Menyediakan jasa pembuatan website, sistem informasi, aplikasi mobile. #selesaikandengancoding" />
     <meta name="twitter:title" content="Portfolio - I Putu Edi Puspayasa" />
-    <meta name="twitter:description" content="Putu Edi Puspayasa - Seorang Web dan Back-End developer dari Bali. Menyediakan jasa pembuatan website, sistem informasi, aplikasi mobile." />
+    <meta name="twitter:description" content="Putu Edi Puspayasa - Seorang Web dan Back-End developer dari Bali. Menyediakan jasa pembuatan website, sistem informasi, aplikasi mobile. #selesaikandengancoding" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://putuedipuspayasa.github.io/portfolio/" />
