add title on skill

--- a/index.html
+++ b/index.html
@@ -211,17 +211,18 @@
             <div class="w-full px-4">
                 <div class="flex flex-wrap items-center justify-center">
                     <a href="https://go.dev/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Go_Logo_Blue.svg/512px-Go_Logo_Blue.svg.png" class="max-h-20" alt="skill edi puspayasa">
-                    </a>
-
-                    <a href="https://www.php.net/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" class="max-h-20" alt="skill edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Go_Logo_Blue.svg/512px-Go_Logo_Blue.svg.png" class="max-h-20" alt="skill edi puspayasa" title="Golang">
                     </a>
 
 
                     <a href="https://laravel.com/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Logo.min.svg" class="max-h-20" alt="skill edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Logo.min.svg" class="max-h-20" alt="skill edi puspayasa" title="Laravel">
                     </a>
+
+                    <a href="https://www.php.net/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" class="max-h-20" alt="skill edi puspayasa" title="PHP">
+                    </a>
+
 
                     <a href="https://vuejs.org/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png" class="max-h-14" alt="skill edi puspayasa">
@@ -229,11 +230,11 @@
 
                     
                     <a href="https://www.postgresql.org/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" class="max-h-16" alt="skill edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" class="max-h-16" alt="skill edi puspayasa" title="PostgreSQL">
                     </a>
 
                     <a href="https://www.mysql.com/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/MySQL_textlogo.svg" class="max-h-20" alt="skill edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/MySQL_textlogo.svg" class="max-h-20" alt="skill edi puspayasa" title="MySQL">
                     </a>
                 </div>
             </div>
