update title on skill

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 
                     <a href="https://vuejs.org/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png" class="max-h-14" alt="skill edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png" class="max-h-14" alt="skill edi puspayasa" title="Vue.js">
                     </a>
 
                     
