add google analytics

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     <meta name="twitter:creator" content="@ptedipuspayasa" />
 
     <link rel="stylesheet" href="dist/output.css">
+
+    <!-- Google tag (gtag.js) Start -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L5ETB0H1EJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-L5ETB0H1EJ');
+    </script>
+    <!-- Google tag (gtag.js) End -->
 </head>
 <body>
     <!-- Om Swastiastu Gaes -->
