--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="mx-auto text-center mb-16">
                     <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Skills</h4>
                     <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-4xl">Technology & Programming Language</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Go, Laravel, PHP, Vue, Vuetify, Laravel, PostgreSQL, MySQL, and others</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Go, Laravel, PHP, Vue, Vuetify, PostgreSQL, and MySQL</p>
                 </div>
             </div>
 
