--- a/page.html
+++ b/page.html
@@ -114,7 +114,7 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me</h4>
                     <h2 class="font-bold text-dark text-2xl mb-5 max-w-lg lg:text-3xl">Never Feel Satisfied to Learn</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Graduated with a bachelor's degree in Information Technology at Udayana University. Experienced more than 5 years in programming especially in Back-End Developer.</p>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Graduated with a bachelor's degree in Information Technology at Udayana University. Experienced since 2015 in programming, especially in Back-End Developer.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Let's be Friend</h3>
@@ -204,7 +204,7 @@
                 <div class="mx-auto text-center mb-16">
                     <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Skills</h4>
                     <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-4xl">Technology & Programming Language</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Go, Laravel, PHP, Vue, Vuetify, Laravel, PostgreSQL, MySQL, and others</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Go, Laravel, PHP, Vue, Vuetify, PostgreSQL, and MySQL</p>
                 </div>
             </div>
 
