--- a/page.html
+++ b/page.html
@@ -204,36 +204,38 @@
                 <div class="mx-auto text-center mb-16">
                     <h4 class="font-semibold text-xl text-primary mb-3 md:text-2xl">Skills</h4>
                     <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-4xl">Technology & Programming Language</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Go, Laravel, PHP, Vue, Vuetify, PostgreSQL, and MySQL</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Go, Nest.js, Laravel, Vue.js, Next.js, Vuetify, PostgreSQL, and MySQL</p>
                 </div>
             </div>
 
             <div class="w-full px-4">
                 <div class="flex flex-wrap items-center justify-center">
                     <a href="https://go.dev/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Go_Logo_Blue.svg/512px-Go_Logo_Blue.svg.png" class="max-h-20" alt="client edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Go_Logo_Blue.svg/512px-Go_Logo_Blue.svg.png" class="max-h-20" alt="skill golang edi puspayasa">
                     </a>
 
-                    <a href="https://www.php.net/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" class="max-h-20" alt="client edi puspayasa">
+                    <a href="https://nestjs.com/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/NestJS.svg" class="max-h-20" alt="skill nest js edi puspayasa">
                     </a>
-
-
+                    
                     <a href="https://laravel.com/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Logo.min.svg" class="max-h-20" alt="client edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Logo.min.svg" class="max-h-22" alt="client edi puspayasa">
                     </a>
 
                     <a href="https://vuejs.org/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png" class="max-h-14" alt="client edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png" class="max-h-14" alt="skills vue edi puspayasa">
                     </a>
 
-                    
+                    <a href="https://nextjs.org/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"></a>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg" class="max-h-20" alt="skills next js edi puspayasa">
+                    </a>
+
                     <a href="https://www.postgresql.org/" target="_blank" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" class="max-h-16" alt="client edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" class="max-h-16" alt="skills pgsql edi puspayasa">
                     </a>
 
                     <a href="https://www.mysql.com/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/MySQL_textlogo.svg" class="max-h-20" alt="client edi puspayasa">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/MySQL_textlogo.svg" class="max-h-20" alt="skills my sql edi puspayasa">
                     </a>
                 </div>
             </div>
